[package]
name = "wgpu-tutorial"
version = "0.1.0"
authors = ["Chris Farmer <WS311471@weston.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.25"
cgmath = "0.18"
env_logger = "0.8"
log = "0.4"
wgpu = "0.9"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
